2008-04-06  Raja R Harinath  <harinath@hurrynot.org>

	Use the ResumableStatement infrastructure for MoveNext ()
	* iterators.cs (Iterator.EmitMoveNext_NoResumePoints): New.
	(Iterator.EmitMoveNext): Use 'resume_points'.  Get rid of
	'old_resume_points'.  Move dispatcher upfront.
	(Iterator.MarkYield): Mark the 'resume_point' of a Yield.
	* statement.cs (ExceptionStatement.DoEmit): Emit a dispatcher if
	in an enumerator.  This encodes the main fix in this patch series
	-- we can only jump into the first instruction of a try from the
	outside, but we want to emit try/finally regions in iterators and
	resume in the middle of them.

2008-04-05  Raja R Harinath  <harinath@hurrynot.org>

	* statement.cs (ExceptionStatement.ResolveFinally): Move setting
	of NeedReturnLabel here.

	Introduce a common point for emitting try/finally to IL
	* statement.cs (ExceptionStatement.DoEmit): New.  Combines all the
	features of the various subclasses, which are now driven by ...
	(ExceptionStatement.EmitPreTryBody): ... this and ...
	(ExceptionStatement.EmitTryBody): ... this and the original
	EmitFinallyBody.
	(TryFinally, Lock, Using, UsingTemporary, DisposableWrapper):
	Remove DoEmit and update to follow above protocol.

	* statement.cs (ExceptionStatement.EmitForDispose): If all labels
	of the dispatcher are the same, skip emitting the 'switch'.
	* iterator.cs (Iterator.EmitDispose): Update to changes.

	Clean up handling of 'using' statement
	* statement.cs (UsingTemporary): New.  Carved out of ...
	(Using): ... this.  Simplify drastically.  Handle exactly
	one variable.
	* cs-parser.jay (using_statement): Split.  Create UsingTemporary
	or Using as appropriate.  If there are multiple variable declared,
	create nested Using statements.
	(resource_acquisition): Kill.

	* statement.cs (ExceptionStatement.EmitForDispose): Use
	EmitFinallyBody, not EmitFinally.

	* flowanalysis.cs (FlowBranching.StealFinallyClauses): Remove.
	* iterator.cs: Update to changes.
